# filename-refactor

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  fullwidth_to_halfwidth.rs  main.rs  transformer.rs
src/cli/: f2h.rs  translate.rs
src/transformer/: fullwidth_to_halfwidth.rs  translate.rs
