[package]
name = "filename-refactor"
version = "0.2.0"
edition = "2024"
authors = ["Toshiki"]
description = "Command to refactor file names"
license = "MIT"
repository = "https://github.com/toshiki670/filename-refactor"
exclude = [".github", ".gitignore", "Makefile.toml"]

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.31", features = ["derive"] }
clap_complete = "4.5.46"
deepl = "0.6.5"
dotenvy = "0.15.7"
env_logger = "0.11.6"
futures = "0.3"
log = "0.4.26"
rpassword = "7.3.1"
rust_support = "0.1.1"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.17.1"

